--- a/src/app/chat-detail/chat-detail.component.html
+++ b/src/app/chat-detail/chat-detail.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="control-container">
         <input type="text" [(ngModel)]="translateTo">
-        <button (click)="translate()">translate</button>
+        <button (click)="translateChat()">translate chat</button>
     </div>
 </div>
 <div class="results" *ngIf="results.count">
